name:                mustache
version:             0.2.0.0
synopsis:            A mustache template parser library.
description:
  Allows parsing and rendering template files with mustache markup. See the
  mustache <http://mustache.github.io/mustache.5.html language reference>.

  Implements the mustache spec version 1.1.3
license:             BSD3
license-file:        LICENSE
author:              Justus Adam
maintainer:          dev@justus.science
-- copyright:
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC >=7.8 && <= 7.10.2


source-repository head
  type:     git
  location: git://github.com/JustusAdam/mustache.git

source-repository this
  type:     git
  branch:   master
  location: git://github.com/JustusAdam/mustache.git
  tag:      v1.0.0.0rc-0



library
  exposed-modules:     Text.Mustache,
                       Text.Mustache.Types,
                       Text.Mustache.Parser,
                       Text.Mustache.Compile,
                       Text.Mustache.Render
  other-modules:       Text.Mustache.Internal
  other-extensions:    NamedFieldPuns, OverloadedStrings, LambdaCase, TupleSections, CPP
  build-depends:       base >=4.7 && <5,
                       text >=1.2 && <1.3,
                       parsec >=3.1 && <3.2,
                       mtl >=2.2 && <2.3,
                       either,
                       aeson,
                       uniplate,
                       unordered-containers,
                       vector,
                       tagsoup,
                       bytestring,
                       hspec,
                       directory,
                       filepath,
                       scientific,
                       conversion >= 1.2,
                       conversion-text,
                       base-unicode-symbols,
                       ja-base-extra >= 0.2.1
  hs-source-dirs:      src/lib
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -optP-include
    -optPdist/build/autogen/cabal_macros.h


executable haskell-mustache
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5,
                       mustache,
                       bytestring,
                       yaml,
                       aeson,
                       cmdargs,
                       text,
                       filepath,
                       base-unicode-symbols
  default-language:    Haskell2010
  hs-source-dirs:      src/bin


test-suite unit-tests
  main-is:            Spec.hs
  type:               exitcode-stdio-1.0
  build-depends:      base >=4.7 && <5,
                      hspec,
                      text,
                      mustache,
                      aeson,
                      unordered-containers,
                      yaml,
                      filepath,
                      process,
                      temporary,
                      directory,
                      base-unicode-symbols
  hs-source-dirs:     test/unit
  default-language:   Haskell2010
