name:                mustache
version:             2.0.1
synopsis:            A mustache template parser library.
description:
  Allows parsing and rendering template files with mustache markup. See the
  mustache <http://mustache.github.io/mustache.5.html language reference>.
  .
  Implements the mustache spec version 1.1.3.
  .
  /Note/: Versions including and beyond 0.4 are compatible with ghc 7.8 again.
license:             BSD3
license-file:        LICENSE
author:              Justus Adam
maintainer:          dev@justus.science
homepage:            https://github.com/JustusAdam/mustache
bug-reports:         https://github.com/JustusAdam/mustache/issues
copyright:           (c) 2015, 2016 Justus Adam
category:            Development
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
                   , test/unit/examples/*.txt.mustache
                   , test/unit/examples/partials/*.txt.mustache
cabal-version:       >=1.10
tested-with:         GHC >=7.8 && <= 7.10.2


source-repository head
  type:     git
  location: git://github.com/JustusAdam/mustache.git

source-repository this
  type:     git
  branch:   master
  location: git://github.com/JustusAdam/mustache.git
  tag:      v2.0



library
  exposed-modules:     Text.Mustache
                     , Text.Mustache.Types
                     , Text.Mustache.Parser
                     , Text.Mustache.Compile
                     , Text.Mustache.Render
  other-modules:       Text.Mustache.Internal
  other-extensions:    NamedFieldPuns
                     , OverloadedStrings
                     , LambdaCase
                     , TupleSections
                     , TemplateHaskell
                     , QuasiQuotes
  build-depends:       base >=4.7 && <5
                     , text
                     , parsec
                     , mtl >= 2.2.1
                     , either
                     , aeson
                     , unordered-containers
                     , vector
                     , bytestring
                     , directory
                     , filepath
                     , scientific
                     , containers
                     , template-haskell
                     , th-lift
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall


executable haskell-mustache
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5
                     , mustache
                     , bytestring
                     , yaml
                     , aeson
                     , cmdargs
                     , text
                     , filepath
  default-language:    Haskell2010
  ghc-options:       -threaded -Wall
  hs-source-dirs:      app


test-suite unit-tests
  main-is:            Spec.hs
  type:               exitcode-stdio-1.0
  build-depends:      base >=4.7 && <5
                    , hspec
                    , text
                    , mustache
                    , aeson
                    , unordered-containers
                    , yaml
                    , filepath
                    , process
                    , temporary
                    , directory
  hs-source-dirs:     test/unit
  default-language:   Haskell2010


test-suite language-specifications
  main-is:            Language.hs
  type:               exitcode-stdio-1.0
  build-depends:      base >=4.7 && <5
                    , hspec
                    , text
                    , mustache
                    , aeson
                    , unordered-containers
                    , yaml
                    , filepath
                    , base-unicode-symbols
                    , wreq
                    , zlib
                    , tar
                    , lens
                    , bytestring
  hs-source-dirs:     test/integration
  default-language:   Haskell2010
